# rustview

./: .gitignore  Cargo.toml  README.md  gradle.properties  settings.gradle
android-view/java/: build.gradle
android-view/java/src/main/java/org/linebender/android/rustview/: RustInputConnection.java  RustView.java
android-view/rust/: Cargo.toml
android-view/rust/src/: view.rs
examples/masonry/masonry-android/: Cargo.toml
examples/masonry/rust/: Cargo.toml
examples/vello_editor/java/: build.gradle
examples/vello_editor/java/src/main/: AndroidManifest.xml
examples/vello_editor/java/src/main/java/org/linebender/android/viewdemo/: DemoView.java  MainActivity.java  RustInputConnection.java  RustView.java
examples/vello_editor/rust/: Cargo.toml  Dioxus.toml
examples/vello_editor/rust/src/: lib.rs
