[workspace]
members = [
    "android-view/rust",
    "examples/vello_editor/rust",
    "examples/masonry/rust",
    "examples/masonry/masonry-android",
]
resolver = "3"

[workspace.dependencies]
android-view = { path = "./android-view/rust" }
masonry_android = { path = "./examples/masonry/masonry-android" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
